Bug 485599 - dolphin crash when using select file shorcuts (shortcut space)
Summary: dolphin crash when using select file shorcuts (shortcut space)
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: Selection Mode (other bugs)
Version First Reported In: 24.02.2
Platform: Neon Linux
: HI crash
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 486069 486589 486830 487012 487327 487718 488052 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-04-15 15:56 UTC by Cherkah
Modified: 2024-06-20 16:30 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.05
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cherkah 2024-04-15 15:56:17 UTC
***
If you're not sure this is actually a bug, instead post about it at https://discuss.kde.org

If you're reporting a crash, attach a backtrace with debug symbols; see https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

SUMMARY


STEPS TO REPRODUCE
1. open dolphin
2. select a folder
3. hit space sortcut


OBSERVED RESULT
 dolphin closes by himself

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Operating System: EndeavourOS 
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.1.0
Qt Version: 6.7.0
Kernel Version: 6.8.5-arch1-1 (64-bit)
Graphics Platform: Wayland


ADDITIONAL INFORMATION
```
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/usr/lib/libthread_db.so.1".
Core was generated by `/usr/bin/dolphin'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0  0x000073a677189567 in QObject::deleteLater() () from /usr/lib/libQt6Core.so.6
[Current thread is 1 (Thread 0x73a6717249c0 (LWP 2637))]
(gdb) disassemble
Dump of assembler code for function _ZN7QObject11deleteLaterEv:
0x000073a677189540 <+0>:     endbr64
0x000073a677189544 <+4>:     push   %rbx
0x000073a677189545 <+5>:     mov    %rdi,%rbx
0x000073a677189548 <+8>:     mov    %rbx,%rsi
0x000073a67718954b <+11>:    sub    $0x20,%rsp
0x000073a67718954f <+15>:    mov    %fs:0x28,%rax
0x000073a677189558 <+24>:    mov    %rax,0x18(%rsp)
0x000073a67718955d <+29>:    xor    %eax,%eax
0x000073a67718955f <+31>:    mov    %rsp,%rdi
0x000073a677189562 <+34>:    call   0x73a67713ce90 <_ZN23QCoreApplicationPrivate23lockThreadPostEventListEP7QObject>
=> 0x000073a677189567 <+39>:    mov    0x8(%rbx),%rax
0x000073a67718956b <+43>:    cmpb   $0x0,0x30(%rax)
0x000073a67718956f <+47>:    js     0x73a6771895e8 <_ZN7QObject11deleteLaterEv+168>
0x000073a677189571 <+49>:    orb    $0x80,0x30(%rax)
0x000073a677189575 <+53>:    cmpb   $0x0,0x10(%rsp)
0x000073a67718957a <+58>:    jne    0x73a6771895d0 <_ZN7QObject11deleteLaterEv+144>
0x000073a67718957c <+60>:    mov    $0x18,%edi
0x000073a677189581 <+65>:    call   *0x459f81(%rip)        # 0x73a6775e3508
0x000073a677189587 <+71>:    mov    %rax,%rsi

```
Comment 1 nyre334 2024-04-16 14:14:22 UTC
I can confirm

STEPS TO REPRODUCE
1. Open dolphin
2. DO NOT select any files or folders.
3. Press space to enter selection mode.


OBSERVED RESULT
Dolphin crashes.
EXPECTED RESULT
Dolphin enters selection mode.

From the tests I have done, the problem only exists on the version 24.02.2 of Dolphin and not on the 24.02.1.

Operating System: KDE neon 6.0
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.7.0
Kernel Version: 6.5.0-26-generic (64-bit)
Graphics Platform: X11
System Version: 4.0
Comment 2 Bug Janitor Service 2024-04-16 14:25:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/765
Comment 3 Méven Car 2024-04-17 07:32:31 UTC
Git commit a07f24228a94aab2bdeb3caaf7a4d694c0180ed7 by Méven Car, on behalf of Felix Ernst.
Committed on 17/04/2024 at 07:32.
Pushed by meven into branch 'master'.

Fix crash while entering selection mode with Qt6.7

`deleteLater()` on a non-existing object seems to cause a crash with
Qt6.7. This makes some sense but wasn't the case previously.

I didn't test this yet but it is a harmless change so if anyone can confirm we can IMO merge directly.

This was brought up in https://invent.kde.org/system/dolphin/-/merge_requests/764#note_920935, reported in the bug linked below, and the sentry crash reporting page also has a few dozen reports (https://crash-reports.kde.org/organizations/kde/issues/13589/?project=4&query=is%3Aunresolved&referrer=issue-stream&stream_index=1).

Dolphin 24.02 is also affected but we are already past the last bug fix release for it.

M  +3    -1    src/selectionmode/bottombarcontentscontainer.cpp

https://invent.kde.org/system/dolphin/-/commit/a07f24228a94aab2bdeb3caaf7a4d694c0180ed7
Comment 4 Felix Ernst 2024-04-24 15:17:01 UTC
*** Bug 486069 has been marked as a duplicate of this bug. ***
Comment 5 Nicolas Fella 2024-05-07 22:24:17 UTC
*** Bug 486589 has been marked as a duplicate of this bug. ***
Comment 6 Felix Ernst 2024-05-10 10:50:48 UTC
*** Bug 486830 has been marked as a duplicate of this bug. ***
Comment 7 Felix Ernst 2024-05-18 11:14:17 UTC
*** Bug 487012 has been marked as a duplicate of this bug. ***
Comment 8 Filip 2024-05-21 16:14:42 UTC
*** Bug 487327 has been marked as a duplicate of this bug. ***
Comment 9 Felix Ernst 2024-05-30 22:43:19 UTC
*** Bug 487718 has been marked as a duplicate of this bug. ***
Comment 10 Felix Ernst 2024-06-20 16:30:42 UTC
*** Bug 488052 has been marked as a duplicate of this bug. ***